--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Shared/CMS_Layout.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Shared/CMS_Layout.cshtml
@@ -138,7 +138,7 @@
                     <div class="bg-white text-dark py-2 collapse-inner rounded">
                         <div class="center">
                             <ul class="sidebar-detail-ul">
-                                <li><a asp-area="AdminCMS" asp-controller="Banner" asp-action="Banner">Banner</a></li>
+                                <li><a asp-area="AdminCMS" asp-controller="Banner" asp-action="Banner">橫幅</a></li>
                                 <li><a asp-area="AdminCMS" asp-controller="News" asp-action="News">公告消息</a></li>
                                 <li><a asp-area="AdminCMS" asp-controller="BanUser" asp-action="Index">禁言會員</a></li>
                                 <li><a asp-area="AdminCMS" asp-controller="Service" asp-action="CustomerResponse">客服聊天</a></li>
