--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Bonus/Bonus.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Bonus/Bonus.cshtml
@@ -50,7 +50,7 @@
             <h2 class="mt-3">優惠券管理</h2>
         </div>
         <div class="col-6 text-end mt-3">
-            <button class="btn btn-primary" data-bs-toggle="modal" href="#addModalToggle"
+            <button class="btn btn-success create_btn" data-bs-toggle="modal" href="#addModalToggle"
                     role="button">
                 新增優惠券
             </button>
@@ -104,7 +104,8 @@
                              </select>
                         </div>
 
-                        <button type="submit" class="mt-3 btn btn-primary btn-block" name="create-submitButton" id="create-submitButton"
+                    <button type="button" class="mt-3 btn btn-danger" onclick="setCreateCouponValue()">Demo</button>
+                    <button type="submit" class="mt-3 btn btn-danger btn-block create-submitButton" id="create-submitButton"
                                 style="width: 100%;">
                             儲存
                         </button>
@@ -191,7 +192,7 @@
                                                 </select>
                                             </div>
 
-                                            <button type="submit" class="mt-3 btn btn-primary btn-block" name="edit-submitButton" id="edit-submitButton"
+                                            <button type="submit" class="mt-3 btn btn-danger btn-block" name="edit-submitButton" id="edit-submitButton"
                                                     style="width: 100%;">
                                                 儲存
                                             </button>
@@ -223,15 +224,15 @@
                                     <!-- 內容表單 -->
                                     <div class="modal-footer">
                                         <div class="form-group">
-                                            <button type="submit" class="mt-3 btn btn-primary" id="SendToMemberByID">發送</button>
+                                            <button type="submit" class="mt-3 btn btn-danger" id="SendToMemberByID">發送</button>
                                         </div>
                                         <div class="form-group">
-                                            <button type="submit" class="mt-3 btn btn-primary btn-block" id="SendCouponToAllMembers">
+                                            <button type="submit" class="mt-3 btn btn-success btn-block" id="SendCouponToAllMembers">
                                                 發送優惠券給所有會員
                                             </button>
                                         </div>
                                         <div class="form-group">
-                                            <button type="submit" class="mt-3 btn btn-primary btn-block SendNotify" id="SendNotify">
+                                            <button type="submit" class="mt-3 btn btn-success btn-block SendNotify" id="SendNotify">
                                                 發送到期提醒
                                             </button>
                                         </div>
@@ -337,7 +338,7 @@
                 {
                     "data": "couponId",
                     "render": function (data, type, row) {
-                        return `<button class="btn btn-primary send-button" data-id="${row.couponId}" data-bs-toggle="modal" data-bs-target="#sendtoMember" >發送</button>`
+                        return `<button class="btn btn-danger send-button" data-id="${row.couponId}" data-bs-toggle="modal" data-bs-target="#sendtoMember" >發送</button>`
                     }
                 },
                 {
@@ -401,6 +402,22 @@
             const quantity = $('#edit-quantity').val();
             const usable = $('#edit-usable').val();
 
+            //驗證非空值
+            if (!name || !content || !expirydate || !quantity || !usable) {
+                showErrorMessage("錯誤", "名稱、內容、到期日、數量、是否可使用為必填欄位，請再次檢查。");
+                return;
+            }
+
+
+            // 驗證必為數字
+            if (!isNumeric(quantity)) {
+                showErrorMessage("錯誤", "數量僅可輸入數字，請再次檢查。");
+                return;
+            }
+            function isNumeric(value) {
+                return /^\d+$/.test(value);
+            }
+
             var formData = new FormData();
             formData.append("CouponId", id);
             formData.append("CouponName", name);
@@ -418,7 +435,7 @@
                 contentType: false,
                 success: function (response) {
                     if (response.success) {
-                        showSuccessMessage("編輯成功", "內容已儲存");
+                        showSuccessMessage("編輯成功", "優惠券內容已儲存");
                         closeModalAndReloadTable();
                     } else {
                         showErrorMessage("編輯失敗", "請再次確認");
@@ -451,13 +468,29 @@
             }
         });
         //新增商品的儲存按鈕===========================
-        $('#create-submitButton').click(function () {
+        $('.create-submitButton').click(function () {
             const id = $('#create-id').val();
             const name = $('#create-name').val();
             const content = $('#create-content').val();
             const expirydate = $('#create-expirydate').val();
             const quantity = $('#create-quantity').val();
             const usable = $('#create-usable').val();
+
+            //驗證非空值
+            if (!name || !content || !expirydate || !quantity || !usable) {
+                showErrorMessage("錯誤", "名稱、內容、到期日、數量、是否可使用為必填欄位，請再次檢查。");
+                return;
+            }
+
+            // 驗證必為數字
+            if (!isNumeric(quantity)) {
+                showErrorMessage("錯誤", "數量僅可輸入數字，請再次檢查。");
+                return;
+            }
+            function isNumeric(value) {
+                return /^\d+$/.test(value);
+            }
+
 
             var formData = new FormData();
             formData.append("CouponId", id);
@@ -468,36 +501,48 @@
             formData.append("Usable", usable);
 
 
+            // 新增-Ajax=============================
             $.ajax({
                 url: "@Url.Action("CreateCoupon","Bonus" , new { area="AdminCMS" })",
-                type: "POST",
+                type: 'POST',
                 data: formData,
                 processData: false,
                 contentType: false,
                 success: function (response) {
                     if (response.success) {
-                        Swal.fire({
-                            icon: 'success',
-                            title: '新增成功',
-                            text: '優惠券已新增'
-                        });
-
-                        $('#addModalToggle').modal('hide');
-                        $('#Bonus-table').DataTable().ajax.reload();
-                    }
-                    else {
-                        Swal.fire({
-                            icon: 'error',
-                            title: '失敗',
-                            text: '新增失敗'
-                        });
+                        showSuccessMessage("新增成功", "優惠券已新增");
+                        closeModalAndReloadTable();
+                    } else {
+                        showErrorMessage("新增失敗", "優惠券新增失敗");
                     }
                 },
                 error: function (error) {
-                    console.log(error);
+                    console.error("AJAX Request Error:", error);
                 }
             });
-        })
+
+            function showSuccessMessage(title, message) {
+                Swal.fire({
+                    icon: 'success',
+                    title: title,
+                    text: message
+                });
+            }
+
+            function showErrorMessage(title, message) {
+                Swal.fire({
+                    icon: 'error',
+                    title: title,
+                    text: message
+                });
+            }
+
+            function closeModalAndReloadTable() {
+                $('#addModalToggle').modal('hide');
+                $('#Bonus-table').DataTable().ajax.reload();
+            }
+        });
+
 
         //刪除==========================================
 
@@ -511,7 +556,8 @@
                     showCancelButton: true,
                     confirmButtonColor: '#3085d6',
                     cancelButtonColor: '#d33',
-                    confirmButtonText: 'Yes, delete it!'
+                    confirmButtonText: '確認刪除',
+                    cancelButtonText: '取消'
                 }).then((result) => {
                     if (result.isConfirmed) {
                         var deleteButton = $(this);
@@ -521,12 +567,12 @@
                             data: { id: couponId },
                             success: function (response) {
                                 if (response.success) {
-                                    console.log("項目已成功刪除");
+                                    console.log("優惠券已成功刪除");
                                     deleteButton.closest("tr").remove();
                                     $('#Bonus-table').DataTable().ajax.reload();
                                     showSuccessMessage("刪除成功", response.message);
                                 } else {
-                                    console.log("刪除項目失敗。");
+                                    console.log("優惠券刪除失敗。");
                                     showErrorMessage("刪除失敗", response.message);
                                 }
                             },
@@ -574,7 +620,8 @@
                     showCancelButton: true,
                     confirmButtonColor: '#3085d6',
                     cancelButtonColor: '#d33',
-                    confirmButtonText: '確認發送'
+                    confirmButtonText: '確認發送',
+                    cancelButtonText: '取消'
                 }).then((result) => {
                     if (result.isConfirmed) {
                         $.ajax({
@@ -658,7 +705,7 @@
 
         $(document).ready(function () {
             $(document).on('click', '#SendNotify', function () {
-                console.log("couponId:", couponIdToSend);
+                console.log("Notify-couponId:", couponIdToSend);
 
                 Swal.fire({
                     title: '確定要發送到期提醒嗎?',
@@ -666,7 +713,8 @@
                     showCancelButton: true,
                     confirmButtonColor: '#3085d6',
                     cancelButtonColor: '#d33',
-                    confirmButtonText: '確認發送'
+                    confirmButtonText: '確認發送',
+                    cancelButtonText: '取消'
                 }).then((result) => {
                     if (result.isConfirmed) {
                         $.ajax({
@@ -693,6 +741,28 @@
                     }
                 });
             });
+        });
+        //新增Demo按鍵
+        function setCreateCouponValue() {
+            $('#create-name').val("測試用9折優惠券");
+            $('#create-content').val("9折優惠券");
+            $('#create-expirydate').val("2023-09-15");
+            $('#create-quantity').val("1000");
+            $('#create-usable').val("false");
+        }
+
+        // 再次新增時清空表單輸入值
+        function clearFormInputs() {
+            $('#create-name').val('');
+            $('#create-content').val('');
+            $('#create-expirydate').val('');
+            $('#create-quantity').val('');
+            $('#create-usable').val('').prop('selected', ''); // 將選項重設為預設值
+        }
+
+        // 點擊關閉按鈕時清空表單
+        $('.create_btn').click(function () {
+            clearFormInputs();
         });
 
 
