--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
@@ -52,7 +52,7 @@
             <h2 class="mt-3">遊戲商品管理</h2>
         </div>
         <div class="col-6 text-end mt-3">
-            <button class="btn btn-success" data-bs-toggle="modal" href="#addGProductModalToggle" role="button">
+            <button class="btn btn-success create_btn" data-bs-toggle="modal" href="#addGProductModalToggle" role="button">
                 新增遊戲商品
             </button>
         </div>
@@ -134,7 +134,8 @@
                             <input type="text" class="form-control" id="create_rate" name="LotteryProbability">
                         </div>
 
-                        <button class="mt-3 btn btn-primary btn-block" name="create-submitButton" id="create-submitButton"
+                        <button type="button" class="mt-3 btn btn-danger" onclick="setCreateProductValue()">Demo</button>
+                        <button class="mt-3 btn btn-danger btn-block create-submitButton" id="create-submitButton"
                                 style="width: 100%;">
                             儲存
                         </button>
@@ -150,7 +151,7 @@
                                     <img id="preview-createimage" src="" class="w-100 border">
                                 </div>
                           
-                            <button class="mt-3 btn btn-primary btn-block" name="create-submitButton" id="create-submitButton"
+                            <button class="mt-3 btn btn-danger btn-block create-submitButton" id="create-submitButton"
                                     style="width: 100%;">
                                 儲存
                             </button>
@@ -183,7 +184,7 @@
 
                     <div class="col">
                         <div class="form-group">
-                            <button type="submit" class="mt-3 btn btn-primary btn-block btnSend" id="btnSend" style="width: 50%;">
+                            <button type="submit" class="mt-3 btn btn-danger btn-block btnSend" id="btnSend" style="width: 100%;">
                                 發送
                             </button>
                         </div>
@@ -191,7 +192,7 @@
 
                     <div class="col">
                         <div class="form-group">
-                            <button type="button" class="mt-3 btn btn-secondary btn-block" id="clearMemberID">
+                            <button type="button" class="mt-3 btn btn-secondary btn-block" id="clearMemberID" style="width: 100%;">
                                 清除
                             </button>
                         </div>
@@ -227,7 +228,7 @@
     </div>
     <!---篩選類別-->
     <div style="margin-left:20px">
-        <button class="btn btn-primary selectAllBtn" id="selectAllBtn">全選</button>
+        <button class="btn btn-danger selectAllBtn" id="selectAllBtn">全選</button>
     </div>
     <div class="container-fluid mt-4">
         <div class="row">
@@ -312,7 +313,7 @@
                                             <label>抽獎機率</label>
                                             <input type="text" class="form-control" id="editrate" name="LotteryProbability">
                                         </div>
-                                        <button type="submit" class="mt-3 btn btn-primary btn-block  edit-submitButton" id="edit-submitButton"
+                                            <button type="submit" class="mt-3 btn btn-danger btn-block  edit-submitButton" id="edit-submitButton"
                                                 style="width: 100%;">
                                             儲存
                                         </button>
@@ -329,7 +330,7 @@
                                             </div>
                                         </div>
 
-                                        <button type="submit" class="mt-3 btn btn-primary btn-block  edit-submitButton" id="edit-submitButton"
+                                            <button type="submit" class="mt-3 btn btn-danger btn-block  edit-submitButton" id="edit-submitButton"
                                                 style="width: 100%;">
                                             儲存
                                         </button>
@@ -516,7 +517,7 @@
                 contentType: false,
                 success: function (response) {
                     if (response.success) {
-                        showSuccessMessage("編輯成功", "內容已儲存");
+                        showSuccessMessage("編輯成功", "商品內容已儲存");
                         closeModalAndReloadTable();
                     } else {
                         showErrorMessage("編輯失敗", "請再次檢查");
@@ -567,7 +568,7 @@
                 }
             });
         });
-            $('#create-submitButton').click(function () {
+            $('.create-submitButton').click(function () {
             // 清除圖片預覽
             $('#preview-createimage').attr('src', '');
             const ProductId = $('#create_id').val()
@@ -580,8 +581,8 @@
             var file = fileInput.files[0];
 
             //驗證非空值
-            if (!ProductName || !ProductDescription || !ProductPrice) {
-                showErrorMessage("錯誤", "名稱、類別、價格為必填欄位，請再次檢查。");
+            if (!ProductName || !ProductDescription || !ProductPrice||!file) {
+                showErrorMessage("錯誤", "名稱、類別、價格、圖片為必填欄位，請再次檢查。");
                 return;
             }
 
@@ -665,7 +666,8 @@
                     showCancelButton: true,
                     confirmButtonColor: '#3085d6',
                     cancelButtonColor: '#d33',
-                    confirmButtonText: 'Yes, delete it!'
+                    confirmButtonText: '確認刪除',
+                    cancelButtonText: '取消'
                 }).then((result) => {
                     if (result.isConfirmed) {
                         var deleteButton = $(this);
@@ -831,6 +833,35 @@
         //清除鍵
         $('#clearMemberID').on('click', function () {
             $('#send-memberID').val(''); // 清空输入框的值
+        });
+
+
+        //新增Demo按鍵
+        function setCreateProductValue() {
+             $('#create_name').val("測試用貓貓");
+             $('#create_description').val("測試用的");
+             $('#create_categoryid').val("1");
+            $('#create_price').val("87");
+            $('#create_rate').val("0.87");
+            $('#create_image').val("https://msit150team02blob.blob.core.windows.net/msit150team02/categories_img_02.jpg");
+            $('#preview-createimage').val("https://msit150team02blob.blob.core.windows.net/msit150team02/categories_img_02.jpg");
+        }
+
+        // 再次新增時清空表單輸入值
+        function clearFormInputs() {
+            $('#create_name').val('');
+            $('#create_description').val('');
+            $('#create_categoryid').val('');
+            $('#create_price').val('');
+            $('#create_rate').val('');
+            $('#create_price').val('');
+            $('#create_image').val('');
+            $('#preview-createimage').val('');
+        }
+
+        // 點擊關閉按鈕時清空表單
+        $('.create_btn').click(function () {
+            clearFormInputs();
         });
 
     </script>
